--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "story-test",
-  "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "private": true,
   "scripts": {
-    "dev": "vite",
+    "serve": "vite preview",
     "build": "vite build",
+    "build-storybook": "storybook build",
+    "dev": "vite",
     "preview": "vite preview",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "storybook": "storybook dev -p 6006"
   },
   "dependencies": {
-    "vue": "^3.4.21"
+    "@mdi/font": "5.9.55",
+    "roboto-fontface": "*",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.3",
+    "vuetify": "^3.0.0-beta.0",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.5.0",
@@ -24,6 +29,9 @@
     "@storybook/vue3-vite": "^8.1.7",
     "@vitejs/plugin-vue": "^5.0.4",
     "storybook": "^8.1.7",
-    "vite": "^5.2.0"
-  }
+    "vite": "^5.2.0",
+    "vite-plugin-vuetify": "^1.0.0-alpha.12",
+    "vue-cli-plugin-vuetify": "~2.5.8"
+  },
+  "type": "module"
 }
