--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "vue": "^3.4.21",
     "vue-router": "^4.3.3",
     "vuetify": "^3.0.0-beta.0",
+    "vuex": "^4.0.2",
+    "vuex-persist": "^3.1.3",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
